Add conformance harness for go loop tests
- add parser, case model, and test environment for .star conformance files

- run conformance cases via xUnit with regex-based expected errors

- seed loop/comprehension subset from bazelbuild/starlark go testdata

- copy conformance data to output and document layout in AGENTS/ExecPlan

- relax comprehension rule ranking to parse in call arguments

--- a/tests/Lokad.Starlark.Tests/Lokad.Starlark.Tests.csproj
+++ b/tests/Lokad.Starlark.Tests/Lokad.Starlark.Tests.csproj
@@ -19,6 +19,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Content Include="TestData\\Conformance\\**\\*.*" CopyToOutputDirectory="PreserveNewest" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Using Include="Xunit" />
   </ItemGroup>
 
