--- a/src/Lokad.Starlark/Lokad.Starlark.csproj
+++ b/src/Lokad.Starlark/Lokad.Starlark.csproj
@@ -4,10 +4,20 @@
     <TargetFrameworks>net8.0;net10.0</TargetFrameworks>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <Version>0.1.0</Version>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
+    <PackageLicenseFile>license.txt</PackageLicenseFile>
+    <PackageIcon>starlark-128x128.png</PackageIcon>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Lokad.Parsing" Version="1.1.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="..\..\README.md" Pack="true" PackagePath="\" />
+    <None Include="..\..\license.txt" Pack="true" PackagePath="\" />
+    <None Include="..\..\assets\icons\starlark-128x128.png" Pack="true" PackagePath="\" />
   </ItemGroup>
 
 </Project>
